sync: nexusai master 8e97a69 镜像（批 3c：删除 RequestContext/MDC 会话态通道）
以 nexusai 两仓 master 为唯一权威，backend 三棵树全量镜像（先删后建，删除也被镜像），
diff -rq --strip-trailing-cr 全 0。harness 侧 mvn -o compile BUILD SUCCESS。

Co-Authored-By: Claude Code <noreply@anthropic.com>